gtk/gtktexttagtable.h
@@ -73,7 +73,7 @@ GType          gtk_text_tag_table_get_type (void) G_GNUC_CONST;
 GDK_AVAILABLE_IN_ALL
 GtkTextTagTable *gtk_text_tag_table_new      (void);
 GDK_AVAILABLE_IN_ALL
-void             gtk_text_tag_table_add      (GtkTextTagTable        *table,
+gboolean         gtk_text_tag_table_add      (GtkTextTagTable        *table,
                                               GtkTextTag             *tag);
 GDK_AVAILABLE_IN_ALL
 void             gtk_text_tag_table_remove   (GtkTextTagTable        *table,
